# buildbot

./: .bbtravis.yml  Dockerfile.master  Makefile  RELEASING.rst  export-tarballs.sh  pyproject.toml  renovate.json  requirements-ci-pyinstaller.txt  requirements-ci.txt  requirements-cidb.txt  requirements-cidocs.txt  requirements-ciworker.txt  requirements-master-docker-extras.txt  requirements-pip.txt
.circleci/: config.yml
master/: pyproject.toml  setup.cfg  setup.py
master/_custom_build/: buildbot_backend.py
master/buildbot/changes/: github.py  svnpoller.py
master/buildbot/clients/: sendchange.py  tryclient.py  usersclient.py
master/buildbot/config/: master.py
master/buildbot/data/: builds.py  buildsets.py
master/buildbot/db/: base.py  builds.py
master/buildbot/process/: build.py  buildrequest.py  buildstep.py  remotecommand.py
master/buildbot/schedulers/: forcesched.py
master/buildbot/scripts/: copydb.py
master/buildbot/steps/: python.py
master/buildbot/steps/source/: base.py  bzr.py  git.py  p4.py  svn.py
master/buildbot/test/: steps.py
master/buildbot/test/fake/: endpoint.py  fakebuild.py
master/buildbot/test/fakedb/: connector.py
master/buildbot/test/integration/: test_integration_secrets_with_vault_hvac.py  test_try_client.py
master/buildbot/test/integration/interop/: test_transfer.py
master/buildbot/test/unit/: test_steps_mixin.py
master/buildbot/test/unit/changes/: test_gitpoller.py
master/buildbot/test/unit/data/: test_builders.py  test_codebase_branches.py  test_codebase_commits.py  test_codebases.py
master/buildbot/test/unit/db/: test_projects.py
master/buildbot/test/unit/process/: test_build.py  test_buildstep.py
master/buildbot/test/unit/scripts/: test_copydb.py
master/buildbot/test/unit/steps/: test_shell.py  test_source_git.py  test_worker.py
master/buildbot/test/unit/worker/: test_protocols_manager_msgmanager.py
master/buildbot/test/unit/www/: test_rest.py
master/buildbot/test/util/: git_repository.py  integration.py
master/buildbot/util/: _notifier.py  sautils.py
master/buildbot/worker/protocols/manager/: msgpack.py
master/buildbot/www/: auth.py  service.py
master/buildbot/www/authz/: authz.py
master/buildbot/www/hooks/: base.py  poller.py
master/contrib/docker/pythonnode_worker/: Dockerfile
master/docker-example/multimaster/: docker-compose.yml
master/docker-example/pypy/master/: Dockerfile
master/docker-example/pypy/worker/: Dockerfile  requirements.txt
master/docker-example/simple/: docker-compose.yml
master/docs/manual/configuration/: buildfactories.rst
master/docs/manual/installation/: installation.rst
(+78 files in other folders)
