[build-system]
requires = [
    "setuptools>=61.2",
]
# Create a dummy backend, which is overkill for our needs
# but we NEED to add '.' to PYTHONPATH to access buildbot_pkg.getVersion
build-backend = "buildbot_backend"
backend-path = ["_custom_build", "."]

[project]
name = "buildbot"
requires-python = ">=3.9"
authors = [
    { name = "Brian Warner", email = "warner-buildbot@lothar.com" },
]
maintainers = [
    { name = "Dustin J. Mitchell", email = "dustin@v.igoro.us" },
]
description = "The Continuous Integration Framework"
readme = "README.rst"
license = "GPL-2.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
    "optional-dependencies",
    "scripts",
    "entry-points",
]

dependencies = [
    'setuptools >= 8.0',
    'Twisted >= 24.7.0',
    'treq >= 20.9',
    'Jinja2 >= 2.1',
    'msgpack >= 0.6.0',
    "croniter >= 1.3.0",
    # required for tests, but Twisted requires this anyway
    'zope.interface >= 4.1.1',
    'sqlalchemy >= 1.4.0',
    'alembic >= 1.6.0',
    'python-dateutil>=1.5',
    "txaio >= 2.2.2",
    "autobahn >= 0.16.0",
    'packaging',
    'PyJWT',
    'pyyaml',
    'unidiff >= 0.7.5',
    # buildbot_windows_service needs pywin32
    'pywin32; platform_system=="Windows"',
]

[project.urls]
Homepage = "http://buildbot.net/"

[tool.aliases]
test = "trial -m buildbot"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"buildbot.reporters.templates" = ["*.txt"]
"buildbot.db.migrations" = ["alembic.ini", "README"]
"buildbot.db.migrations.versions" = ["*.py"]
"buildbot.scripts" = ["sample.cfg", "buildbot_tac.tmpl"]
"buildbot.spec" = ["*.raml"]
"buildbot.spec.types" = ["*.raml"]
"buildbot.test.unit.test_templates_dir" = ["*.html"]
"buildbot.test.unit.test_templates_dir.plugin" = ["*.*"]
"buildbot.test.integration.pki" = ["*.*"]
"buildbot.test.integration.pki.ca" = ["*.*"]
